<resources>
    <string name="app_name">Окна домов</string>
    <string name="start_game">Новая игра</string>
    <string name="printing">Печатает</string>
    <string name="error_data_loading">Ошибка загрузки данных</string>
    <string name="notification_title">Антону нужна твоя помощь!</string>
    <string name="help_hero">Он ждет твоего ответа!</string>
    <string name="resume_game">Возобновить</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="pref_notification_title">Включить уведомления</string>
    <string name="pref_animation_title">Анимация появления сообщений</string>
    <string name="pref_enable_anim_caption">Показывать анимацию появления сообщений и кнопок</string>
    <string name="pref_notification_category">Уведомления</string>
    <string name="pref_ui_category">Внешний вид</string>
    <string name="pref_warning_title">Внимание!</string>
    <string name="pref_warning_caption">Для применения настроек необходимо перезагрузить игру</string>
</resources>
